...
                                        animatedVisibilityScope
                                    )
                                    .constrainAs(type) {
                                        start.linkTo(parent.start)
                                        top.linkTo(parent.top)
                                    }
                                    .testTag("media-type"),
                                colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.primary)
                            )
                            Text(
                                media.name,
                                color = MaterialTheme.colorScheme.primary,
                                fontSize = 30.sp,
...
                                    .constrainAs(name) {
                                        start.linkTo(type.end)
                                        end.linkTo(parent.end)
                                        top.linkTo(parent.top)
                                        bottom.linkTo(parent.bottom)
                                    }
                                    .testTag("media-name"))
                        }
                    }
                    LazyRow(
                        horizontalArrangement = Arrangement.SpaceEvenly,
                        modifier = Modifier
                            .fillMaxWidth()
...
                        item {
                            Text(
                                pluralStringResource(R.plurals.scrobble, media.plays, media.plays),
                                color = MaterialTheme.colorScheme.onSecondary,
                                modifier = Modifier
                                    .animateItem()
                                    .testTag("scrobbles")
                            )
                        }
                        if (length != null) {
                            item {
                                Icon(
                                    painterResource(R.drawable.icon_time),
...
                        painterResource(R.drawable.button_cloud_download),
                        "Pull Data From Cloud"
                    )
                }
                IconButton(
                    onClick = { deleteMediaDialog = true },
                    modifier = Modifier.testTag("delete-button")
                )
                {
                    AnimatedVisibility(
                        !deleteMediaDialog, enter = fadeIn() + scaleIn(),
                        exit = fadeOut() + scaleOut()
                    ) {
...
                        }
                    }
                }

                IconButton(
                    onClick = { editMediaDialog = true },
                    modifier = Modifier.testTag("edit-button")
                ) {
                    AnimatedVisibility(
                        !editMediaDialog, enter = fadeIn() + scaleIn(),
                        exit = fadeOut() + scaleOut()
                    ) {
                        with(sharedTransitionScope) {
...
