...
            targetState = isVisible,
            transitionSpec = { fadeIn() togetherWith fadeOut() },
            label = "DeletePrompt"
        ) { visible ->
            Box(Modifier.fillMaxSize()) {
                if (visible) {
                    ConstraintLayout(Modifier.testTag("delete-dialog")) {
                        val (dialog, scrim) = createRefs()
                        Box(
                            modifier = Modifier
                                .fillMaxSize()
                                .clickable {
                                    onDismissRequest()
...
                                    Modifier.testTag("cancel-button")
                                ) { Text(stringResource(R.string.cancel)) }
                                TextButton(
                                    {
                                        onConfirm()
                                    },
                                    Modifier.testTag("delete-confirm-button")
                                ) { Text(stringResource(R.string.delete)) }
                            }
                        }
                    }
                }
            }
...
